# mcfp

./: .gitignore  README.md  pyproject.toml
configs/: audit_dataset.yaml  build_manifest.yaml  build_splits.yaml  compute_stats.yaml  data_gen.yaml  data_gen_family_franka.yaml  data_gen_family_openmanipulator.yaml  data_gen_family_rm65b.yaml  data_gen_family_wx200.yaml  data_gen_single.yaml  data_gen_single_franka.yaml  data_gen_single_openmanipulator.yaml  data_gen_single_rm65b.yaml  data_gen_single_wx200.yaml  train_stage1.yaml
data/manifests/: stage1_manifest.jsonl
data/reports/: audit_stage1.json
data/splits/: stage1_test.txt  stage1_train.txt  stage1_val.txt
data/stats/: stage1_train_stats.json
env/: environment.yml  mcfp_sim.yml  mcfp_sim_minimal.yml
mcfp/: __init__.py
mcfp/data/: collate.py  datasets.py  io.py  morphology_io.py  sampling.py
mcfp/models/: __init_#  backbone.py  heads.py  morph_encoder.py  morph_graph.py  pose_encoder.py  stage1.py
mcfp/sim/: collision.py  fk_ik.py  grid_builder.py  indicators.py  robot_model.py
mcfp/train/: checkpoint.py  losses.py  metrics.py  runner.py
mcfp/utils/: config.py  logging.py  seed.py
scripts/: analyze_num_cells.py  audit_capability_rm65_family.py  audit_dataset.py  build_manifest.py  build_splits.py  compute_stats.py  convert_urdf_to_morph_json.py  debug_print_batch.py  generate_capability_family.py  generate_capability_single.py  plot_metrics.py  train_stage1.py  viz_capability_single.py  viz_combine.py  viz_rm65_interactive.py
tests/: test_single_episode_smoke.py
(+431 files in other folders)
