[project]
name = "mcfp"
version = "0.1.0"
description = "Morphology-Conditioned Feasibility Prior"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "torch",
  "numpy",
  "omegaconf",
  "pyyaml",
  "pandas",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
